# biu1-gh-rag2skill

./: .gitignore  DESIGN.md  README.md  SKILL.md  V2_IMPLEMENTATION_SUMMARY.md  main.py  pyproject.toml  requirements.txt
configs/: config.example.yaml
src/: __init__.py  cache.py  chunker.py  config.py  embedder.py  fetcher.py  generator.py  generator_v2.py  llm_client.py  retriever.py  selector.py  vector_store.py
tests/: test_cache.py  test_chunker.py  test_fetcher.py  test_generator.py  test_retriever.py  test_selector.py
