[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biu1-gh-rag2skill"
version = "0.2.0"
description = "Draft a SKILL.md for any GitHub repository using a lightweight local RAG pipeline."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "openai>=1.0.0",
    "click>=8.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
